# solana-price-prediction

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
api/: Dockerfile  README.md  requirements.txt
api/app/: main.py  pipeline_components.py
api/models/: solana_next_day_high.joblib  xgboost_solana_v1.joblib
dashboard/: README.md  requirements.txt
dashboard/app/: main.py  utils.py
dashboard/app/students/: sol_25739083.py
dashboard/app/views/: solana.py
notebooks/: solana_model_training.ipynb
solana_price_prediction/: __init__.py  config.py  dataset.py  features.py  kraken.py  plots.py
solana_price_prediction/modeling/: estimators.py  predict.py  train.py
tests/: test_features.py
